// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptimizedFlatList Snapshots should match snapshot for empty list 1`] = `
<RCTFlatList
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  accessibilityRole="list"
  accessible={true}
  data={[]}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  ref={null}
  refreshing={false}
  removeClippedSubviews={true}
  renderItem={[Function]}
  testID="RCTFlatList"
  updateCellsBatchingPeriod={50}
  viewabilityConfig={
    {
      "itemVisiblePercentThreshold": 50,
      "minimumViewTime": 300,
    }
  }
  windowSize={5}
/>
`;

exports[`OptimizedFlatList Snapshots should match snapshot for list with items 1`] = `
<RCTFlatList
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  accessibilityRole="list"
  accessible={true}
  data={
    [
      {
        "description": "Description for item 0",
        "id": "item-0",
        "title": "Item 0",
      },
      {
        "description": "Description for item 1",
        "id": "item-1",
        "title": "Item 1",
      },
      {
        "description": "Description for item 2",
        "id": "item-2",
        "title": "Item 2",
      },
      {
        "description": "Description for item 3",
        "id": "item-3",
        "title": "Item 3",
      },
      {
        "description": "Description for item 4",
        "id": "item-4",
        "title": "Item 4",
      },
    ]
  }
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  ref={null}
  refreshing={false}
  removeClippedSubviews={true}
  renderItem={[Function]}
  testID="RCTFlatList"
  updateCellsBatchingPeriod={50}
  viewabilityConfig={
    {
      "itemVisiblePercentThreshold": 50,
      "minimumViewTime": 300,
    }
  }
  windowSize={5}
/>
`;

exports[`OptimizedFlatList Snapshots should match snapshot for loading state 1`] = `
<RCTFlatList
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  accessibilityRole="list"
  accessible={true}
  data={
    [
      {
        "description": "Description for item 0",
        "id": "item-0",
        "title": "Item 0",
      },
      {
        "description": "Description for item 1",
        "id": "item-1",
        "title": "Item 1",
      },
      {
        "description": "Description for item 2",
        "id": "item-2",
        "title": "Item 2",
      },
      {
        "description": "Description for item 3",
        "id": "item-3",
        "title": "Item 3",
      },
      {
        "description": "Description for item 4",
        "id": "item-4",
        "title": "Item 4",
      },
      {
        "description": "Description for item 5",
        "id": "item-5",
        "title": "Item 5",
      },
      {
        "description": "Description for item 6",
        "id": "item-6",
        "title": "Item 6",
      },
      {
        "description": "Description for item 7",
        "id": "item-7",
        "title": "Item 7",
      },
      {
        "description": "Description for item 8",
        "id": "item-8",
        "title": "Item 8",
      },
      {
        "description": "Description for item 9",
        "id": "item-9",
        "title": "Item 9",
      },
    ]
  }
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  ref={null}
  refreshing={false}
  removeClippedSubviews={true}
  renderItem={[Function]}
  testID="RCTFlatList"
  updateCellsBatchingPeriod={50}
  viewabilityConfig={
    {
      "itemVisiblePercentThreshold": 50,
      "minimumViewTime": 300,
    }
  }
  windowSize={5}
/>
`;
